fix(theme-chalk): [pagination] fix spacing when sizes is at the end (#7339)

--- a/packages/theme-chalk/src/pagination.scss
+++ b/packages/theme-chalk/src/pagination.scss
@@ -276,6 +276,12 @@
         min-width: 24px;
       }
     }
+
+    @include e(sizes) {
+      @include when(last) {
+        margin-left: 16px;
+      }
+    }
   }
 }
 
